<resources>
    <string name="app_name">Fed FAST</string>
    <string name="tab_text_1">Urban</string>
    <string name="tab_text_2">Semi Urban</string>
    <string name="tab_text_3">Rural</string>
    <string name="loan_amount">Loan amount \u20B9</string>
    <string name="interest_rate">Interest rate %</string>
    <string name="veh_loan_eligb">Auto loan eligibility</string>
    <string name="loan_tenure">Loan tenure MM</string>
    <string name="obligations_txt">Obligations \u20B9</string>
    <string name="net_income">Net monthly \n income \u20B9</string>
    <string name="veh_value">Vehicle value \u20B9</string>
    <string name="calculate">Calculate</string>
    <string name="save_btn">OK</string>
    <string name="cancel_btn">Clear</string>
    <string name="home_loan">Home loan \u20B9</string>
    <string name="personal_loan">Personal loan \u20B9</string>
    <string name="others_loan">Others \u20B9</string>
    <string name="title_activity_result">Result</string>
    <string name="result_foir">FOIR :</string>
    <string name="result_takehome">Net monthly \n take home :</string>
    <string name="result_ltvlable">LTV :</string>
    <string name="result_emi">Proposed EMI :</string>
    <string name="result_location">Location :</string>
    <string name="result_eligible_yes">Eligible</string>
    <string name="result_eligible_no">Not Eligible</string>
    <string name="result_deviation_yes">Apply foir deviation</string>
    <string name="result_deviation_no">Remove foir deviation</string>
    <string name="action_settings">Settings</string>
    <string name="min_take_home">Minimum take home(\u20B9)</string>
    <string name="emi_error">Error in calculating EMI</string>
    <string name="salary_slabs">FOIR Salary slabs (Lacs)</string>
    <string name="salary_slab_1">Slab 1</string>
    <string name="salary_slab_2">Slab 2</string>
    <string name="foir_slab">Salary segment :</string>
    <string name="foir_deviation">FOIR Deviation :</string>
    <string name="foir_norm">ⓘ FOIR norm :</string>
    <string name="takehome_norm">ⓘ Take home norm :</string>
    <string name="err_mandatory_fields">Please fill mandatory fields</string>
    <string name="err_loan_amount">Loan amount should be less than vehicle value</string>
    <string name="copy_right">© Retail sales vertical, Bangalore</string>
    <string name="foir_deviation_title">Additional 10% FOIR is permitted subject to compliance of following norms</string>
    <string name="foir_deviation_norm1">1. No deviation in minimum take home</string>
    <string name="foir_deviation_norm2">2. Income proof</string>
    <string name="foir_deviation_norm3">3. CIBIL score and Security margin</string>
</resources>
