<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/foir_deviation_norm1"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/alert_items_gap"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/foir_deviation_norm2"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/alert_items_gap"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/foir_deviation_norm3"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:showDividers="middle"

            android:gravity="center">
        <Button
                android:id="@+id/dialogLoginBtn"
                android:text="@string/save_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
