<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/home_loan"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/homeLoanTV"
                android:layout_weight=".5"/>
        <EditText
                android:id="@+id/homeLoanEt"
                android:hint="0"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:layout_weight=".5"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/personal_loan"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perLoanTV"
                android:layout_weight=".5"/>
        <EditText
                android:id="@+id/perLoanEt"
                android:hint="0"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:layout_weight=".5"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/alert_dlg_left_margin"
            android:layout_marginRight="@dimen/alert_dlg_right_margin"
            android:gravity="center">


        <TextView
                android:text="@string/personal_loan"
                android:textSize="@dimen/main_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/othersTV"
                android:layout_weight=".5"/>
        <EditText
                android:id="@+id/othersEt"
                android:hint="0"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/edit_text"
                android:layout_weight=".5"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:showDividers="middle"

            android:gravity="center">
        <Button
                android:id="@+id/dialogLoginBtn"
                android:text="@string/save_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/dialogCancelBtn"
                android:text="@string/cancel_btn"
                style="@style/Base.Widget.AppCompat.Button.Colored"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>