<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_result"
        tools:context=".ResultActivity" >

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/leftGuide"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent=".05"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelCenter"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.50"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelHorizondal"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.15"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="left"
                                        tools:layout_editor_absoluteX="411dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineRight"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.95"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/guidelHorizondal"
            android:textSize="30sp" />
    <TextView
            android:text="@string/result_foir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foirTvLable" app:layout_constraintEnd_toStartOf="@+id/guidelCenter"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/result_items_gap"
            app:layout_constraintTop_toBottomOf="@+id/resultTv" android:textSize="@dimen/main_text_size"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foirTv"
            app:layout_constraintTop_toTopOf="@+id/foirTvLable"
            app:layout_constraintBottom_toBottomOf="@+id/foirTvLable" android:textSize="@dimen/main_text_size"
            app:layout_constraintStart_toStartOf="@+id/guidelCenter" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/result_takehome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/takehomeLable" android:layout_marginTop="@dimen/result_items_gap"
            app:layout_constraintTop_toBottomOf="@+id/foirTvLable"
            app:layout_constraintEnd_toStartOf="@+id/guidelCenter" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="@dimen/main_text_size"/>


    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/takehomeTv"
            app:layout_constraintBottom_toBottomOf="@+id/takehomeLable"
            app:layout_constraintTop_toTopOf="@+id/takehomeLable"
            app:layout_constraintStart_toStartOf="@+id/guidelCenter"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="@dimen/main_text_size"/>
    <TextView
            android:text="@string/result_ltvlable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ltvLabel"
            android:layout_marginTop="@dimen/result_items_gap"
            app:layout_constraintTop_toBottomOf="@+id/takehomeLable"
            app:layout_constraintEnd_toStartOf="@+id/guidelCenter" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="@dimen/main_text_size"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ltvTv"
            app:layout_constraintTop_toTopOf="@+id/ltvLabel" app:layout_constraintBottom_toBottomOf="@+id/ltvLabel"
            app:layout_constraintStart_toStartOf="@+id/guidelCenter" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="@dimen/main_text_size"/>
    <TextView
            android:text="@string/result_emi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emiTvLabel" app:layout_constraintEnd_toStartOf="@+id/guidelCenter"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ltvLabel" android:layout_marginTop="@dimen/result_items_gap"
            android:textSize="@dimen/main_text_size"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emiTv"
            app:layout_constraintTop_toTopOf="@+id/emiTvLabel"
            app:layout_constraintBottom_toBottomOf="@+id/emiTvLabel"
            app:layout_constraintStart_toStartOf="@+id/guidelCenter" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="@dimen/main_text_size"/>
    <TextView
            android:text="@string/result_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationLabel"
            android:layout_marginTop="@dimen/result_items_gap"
            app:layout_constraintTop_toBottomOf="@+id/emiTvLabel" app:layout_constraintEnd_toStartOf="@+id/guidelCenter"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="@dimen/main_text_size"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/locationTv"
            app:layout_constraintTop_toTopOf="@+id/locationLabel"
            app:layout_constraintBottom_toBottomOf="@+id/locationLabel"
            app:layout_constraintStart_toStartOf="@+id/guidelCenter" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="@dimen/main_text_size"/>
    <ToggleButton
            android:checked="true"
            android:textOn="@string/result_deviation_yes"
            android:textOff="@string/result_deviation_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="@color/colorFedBlue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/deviationBut" app:layout_constraintStart_toStartOf="@+id/leftGuide"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="@dimen/result_items_gap"
            app:layout_constraintTop_toBottomOf="@+id/locationLabel"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>